--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "lint:style:fix": "stylelint --fix 'src/**/*.{css,less,sass,scss}'",
     "lint": "npm run --silent lint:style; npm run --silent lint:es",
     "lint:fix": "npm run --silent lint:style:fix; npm run --silent lint:es:fix",
+    "format": "prettier --write --loglevel=warn 'src/**/*.{js,jsx,ts,tsx,html.json,gql,graphql}'",
+    "fix": "npm run --silent format; npm run --silent lint:fix",
     "preinstall": "npx typesync@'>=0.11.0' || :"
   },
   "dependencies": {
@@ -26,6 +28,7 @@
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@vitejs/plugin-react": "^3.0.0",
     "eslint": "^8.0.1",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-config-standard-with-typescript": "^31.0.0",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-jest": "^27.2.1",
@@ -35,6 +38,7 @@
     "eslint-plugin-react": "^7.32.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "jest": "^29.3.1",
+    "prettier": "^2.8.8",
     "stylelint": "^14.16.1",
     "stylelint-config-recess-order": "^3.1.0",
     "stylelint-config-standard": "^29.0.0",
